--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -79,4 +79,4 @@ unbind -Tcopy-mode-vi Enter
 bind-key -Tcopy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 
-bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs -I {} tmux switch-client -t {}"
+bind j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs -I {} tmux switch-client -t {}"
