--- a/.config/tmux/.tmux.conf
+++ b/.config/tmux/.tmux.conf
@@ -76,7 +76,7 @@ bind-key -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
 unbind -Tcopy-mode-vi Enter
-bind-key -Tcopy-mode-vi Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -Tcopy-mode-vi Enter send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 
 bind j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs -I {} tmux switch-client -t {}"
