--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -47,10 +47,10 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Better pane resizing
-bind-key -n S-Left resize-pane -L 2
-bind-key -n S-Down resize-pane -D 2
-bind-key -n S-Up resize-pane -U 2
-bind-key -n S-Right resize-pane -R 2 
+bind-key -n 'M-C-h' if-shell "$is_vim" 'send-keys M-C-h' 'resize-pane -L 2'
+bind-key -n 'M-C-j' if-shell "$is_vim" 'send-keys M-C-j' 'resize-pane -D 2'
+bind-key -n 'M-C-k' if-shell "$is_vim" 'send-keys M-C-k' 'resize-pane -U 2'
+bind-key -n 'M-C-l' if-shell "$is_vim" 'send-keys M-C-l' 'resize-pane -R 2'
 
 bind -n C-Left resize-pane -L 10
 bind -n C-Down resize-pane -D 10
